--- a/hwk2.html
+++ b/hwk2.html
@@ -1640,6 +1640,7 @@ summary {
 </div>
 
 
+<p>In case you want to see the arithmetic I did with inline code, here is the GitHub link to .rmb file: <a href="https://github.com/vader-coder/Stat11/blob/master/hwk2.rmd" class="uri">https://github.com/vader-coder/Stat11/blob/master/hwk2.rmd</a></p>
 <ol style="list-style-type: decimal">
 <li>Reaction time, measured from the moment the driver first sees the danger until he or she gets a foot on the brake pedal, is thought to follow a Normal model with a mean of 1.5 seconds and a standard deviation of 0.18 seconds.<br />
 </li>
